# ComfyUI-KikoTools

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  __init__.py  comfyui_xyz_grid_plan.md  example.py  mypy.ini  plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  test_simple_workflow.json  test_widget_persistence.json  xyz-study.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  publish.yml  release.yml  tests.yml
docs/: RGTHREE_WIDGET_FRAMEWORK.md  RGTHREE_WIDGET_FRAMEWORK_EXAMPLE.md
examples/: test_prompts.txt  xyz_grid_test_workflow.json
examples/documentation/: batch_prompts.md  display_any.md  display_text.md  empty_latent_batch.md  flux_sampler_params.md  gemini_prompt.md  image_to_multiple_of.md  kiko_film_grain.md  kiko_save_image.md  local_image_loader.md  lora_folder_batch.md  plot_parameters.md  resolution_calculator.md  sampler_combo.md  sampler_select_helper.md  scheduler_select_helper.md  seed_history.md  text_encode_sampler_params.md  width_height_selector.md
examples/workflows/: display_any_example.json  display_text_example.json  (+11 more)
kikotools/: __init__.py
scripts/: run_mypy.sh
tests/: __init__.py  conftest.py  test_embedding_autocomplete.py  test_embedding_autocomplete_fixed.py  test_embedding_paths.py  test_folder_paths.py
web/: display_any.js  display_text.js  empty_latent_batch_swap.js  gemini_prompt_ui.js  kikoEmbeddingAutocomplete.js  kiko_custom_colors.js  kiko_follow_execution.js  kiko_local_image_loader.js  kiko_save_image_ui.js  kikotools_extensions.js  seed_history_ui.js  width_height_swap.js  xyz_plot_controller.css  xyz_plot_controller.js  xyz_plot_controller_old.js  xyz_plot_helper.js  xyz_prompt.js
web/css/: xyz_grid.css
(+165 files in other folders)
